fix footer image on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -235,6 +235,7 @@ footer.inner {
   }
   .footer.inner {
     background-position: center;
+    background-size: 100%;
   }
 }
 
@@ -268,6 +269,7 @@ footer.inner {
   }
   .footer.inner {
     background-position: center;
+    background-size: 100%;
   }
 }
 
@@ -301,6 +303,7 @@ footer.inner {
   }
   .footer.inner {
     background-position: center;
+    background-size: 100%;
   }
 }
 
@@ -334,6 +337,7 @@ footer.inner {
   }
   .footer.inner {
     background-position: center;
+    background-size: 100%;
   }
 }
 
@@ -367,5 +371,6 @@ footer.inner {
   }
   .footer.inner {
     background-position: center;
+    background-size: 100%;
   }
 }
